golem-schema-derive/tests/compile_fail/poem_with_field.stderr
error: PoemSchema does not support `#[serde(with)]` on a field
  --> tests/compile_fail/poem_with_field.rs:19:13
   |
19 |     #[serde(with = "some_module")]
   |             ^^^^
